Fix collapsed toc not showing on mobile

--- a/inst/templates/readthedown/readthedown.css
+++ b/inst/templates/readthedown/readthedown.css
@@ -310,11 +310,6 @@ dl dd{
 }
 
 
-@media screen and (max-width: 480px){
-    .mobile-hide{
-        display:none}
-}
-
 @media screen and (max-width: 768px){
     .tablet-hide{
         display:none}
@@ -324,7 +319,7 @@ dl dd{
         padding: 1em;
     }
     #content.shift{
-        position:fixed;
+        position:relative;
         min-width:100%;
         left:75%;
         top:0;
@@ -379,12 +374,6 @@ dl dd{
 
     #content{
         background:#fcfcfc}
-}
-
-
-@media screen and (max-width: 480px){
-    #content .sidebar{
-        width:100%}
 }
 
 
